<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>helios2_node</name>
  <version>0.1.0</version>
  <description>
    ROS 2 driver for LUCID Vision Helios2 ToF camera.
    Publishes sensor_msgs/PointCloud2 (XYZI) and sensor_msgs/Image (mono16 intensity).
  </description>
  <maintainer email="dinoop@example.com">Dinoop</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>arena_sdk</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
